# Snake

./: .gitignore  CMakeLists.txt  README.md  constants.h  doc.md  game.cpp  game.h  game.ui  main.cpp  resources.qrc  types.h  utils.cpp  utils.h  window.cpp  window.h  window.ui
